# rust-web-scraper

./: Cargo.toml  recipes.csv
src/: main.rs
