[package]
name = "rust_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
json = "0.12.4"
reqwest = { version = "0.11.22", features = ["blocking"] }
scraper = "0.18.1"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
